create App, MovieSearch components, browserMocks

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
+    "setupTestFrameworkScriptFile": "<rootDir>/config/browserMocks.js",
     "testPathIgnorePatterns": [
       "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
     ],
