--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bc_ms",
   "version": "0.1.0",
+  "homepage": "https://github.com/HMAN1911/favourite_movies_list",
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.5.1",
@@ -29,6 +30,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^0.12.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
@@ -61,7 +63,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
